# grt-substreams-subgraph

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  package.json  pull_request_template.md  subgraph.yaml  substreams.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
.husky/: pre-commit
abis/: erc20.json
proto/: erc20.proto
src/: lib.rs  utils.rs
src/abi/: erc20.rs  mod.rs
src/pb/: eth.erc20.v1.rs  mod.rs  sf.substreams.rpc.v2.rs
