[package]
name = "grt_substreams_subgraph"
version = "0.1.0"
description = "GRT Substreams backed Subgraph"
edition = "2021"
repository = "https://github.com/sahra-karakoc/grt-substreams-subgraph"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
ethabi = "17.0"
wasm-bindgen = "0.2.79"
prost = "0.11.0"
prost-types = "0.11.0"
hex = "0.4.3"
substreams = "^0.5.6"
substreams-ethereum = { git = "https://github.com/streamingfast/substreams-ethereum" }
substreams-entity-change = "1.1.0"
num-bigint = "0.4"
bigdecimal = "0.3"
tiny-keccak = "2.0.2"

[build-dependencies]
anyhow = "1"
substreams-ethereum = { git = "https://github.com/streamingfast/substreams-ethereum" }

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"